updated versions, cleaned up junk